--- a/Exercicios/OApertador/app/src/main/AndroidManifest.xml
+++ b/Exercicios/OApertador/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.oapertador">
+    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
             android:allowBackup="true"
@@ -9,21 +13,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <intent-filter>
+                    <action android:name="android.intent.action.BOOT_COMPLETED" />
+                    <action android:name="android.intent.action.CAMERA_BUTTON" />
+                    <action android:name="android.intent.extra.KEY_EVENT" />
+                </intent-filter>
             </intent-filter>
         </activity>
         <receiver
-                android:name=".CameraReceiver"
-                android:exported="true" >
-                <intent-filter>
-                    <action android:name="android.intent.action.CAMERA_BUTTON" />
-                </intent-filter>
-
-        </receiver>
+                android:name=".CameraReceiver" android:exported="true"/>
     </application>
-
 </manifest>
